# paku

./: .gitignore  LICENSE  Makefile  README.md  config.yaml.template  pyproject.toml  requirements.txt
paku/: __main__.py  cli.py  config.py  context.py  logging_utils.py  models.py  pipeline.py
paku/extractors/: __init__.py  anime.py  recipe.py  url.py
paku/ocr/: base.py  google_vision.py  ollama.py  router.py  stub.py
paku/outputs/: __init__.py  csv_out.py  json_out.py  txt_out.py
paku/web/: __init__.py  app.py  database.py
paku/web/static/: index.html
scripts/: reenrich_network_errors.py  reenrich_normalization.py  reenrich_studios.py
tests/: conftest.py  test_anime_extractor.py  test_batch.py  test_batch_txt.py  test_config.py  test_csv_notion_headers.py  test_database.py  test_google_vision_engine.py  test_ocr_engines.py  test_ocr_ollama.py  test_pipeline.py  test_recipe_extractor.py  test_url_extractor.py  test_web_api.py
tests/fixtures/: README.md
utils/: compile_manifest.py
