[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paku"
version = "0.1.0"
description = "Instagram screenshot data pipeline"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
ocr = [
    "google-cloud-vision>=3.7",
]
smart = [
    # requests is already a core dependency (AniList client uses it).
    # This extra exists as a capability marker matching the paku[ocr] pattern.
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.scripts]
paku = "paku.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["paku"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "integration: tests that require real external services (Google Vision API, credentials, fixture images)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
