[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paku"
version = "1.0.0"
description = "CLI pipeline that extracts anime titles, URLs, and recipes from Instagram screenshots"
readme = "README.md"
license = { text = "MPL-2.0" }
authors = [{ name = "loremcc" }]
keywords = ["instagram", "ocr", "anime", "anilist", "data-pipeline"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
ocr = [
    "google-cloud-vision>=3.7",
]
smart = [
    # requests is already a core dependency (AniList client uses it).
    # This extra exists as a capability marker matching the paku[ocr] pattern.
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/loremcc/paku"

[project.scripts]
paku = "paku.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["paku"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "integration: tests that require real external services (Google Vision API, credentials, fixture images)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
